2007-06-01  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #321741

	* gui/e-calendar-view.c: (e_calendar_view_new_appointment_full):
	Default first date for appointment or meeting is changed on actual
	date if have selected start date in past. (This doesn't affect
	double click in calendar view.)

2007-05-27  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #330098 from Naresh

	* gui/dialogs/select-source-dialog.c: (select_source_dialog):

2007-05-27  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #351729 from Milan Crha

	* gui/dialogs/event-editor.c: (event_editor_construct):
	* gui/dialogs/event-page.glade:
	* gui/dialogs/task-editor.c: (task_editor_construct):

2007-05-25  Matthew Barnes  <mbarnes@redhat.com>

	* gui/dialogs/comp-editor.c (comp_editor_show_help):
	Call gnome_help_display() instead of gnome_help_display_desktop(),
	and remove BASE_VERSION from the filename.  (#386503)

2007-05-12  simon.zheng  <simon.zheng@sun.com>

	* gui/e-calendar-view.c: (e_calendar_view_copy_clipboard):
	The last arguments in API gtk_clipboard_set_text() should be 
	the length of string in bytes rather than in characters.

2007-04-10  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #329168 from Andre Klapper

	* gui/dialogs/cal-prefs-dialog.glade: Set the mnemonics for widgets.

2007-04-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #415562 from Wang Xin

	* gui/gnome-cal.c: (update_todo_view): Fix for a critical warning
	crasher.

2007-04-05  Matthew Barnes  <mbarnes@redhat.com>

	* gui/print.c (print_calendar): Fix a crasher. (#401539)

2007-03-29  Matthew Barnes  <mbarnes@redhat.com>

	* gui/e-cal-component-memo-preview.c (write_html):
	Use a format string ("%s") when passing uncontrolled data to a
	printf-style function (CVE-2007-1002).

2007-03-05  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/dialogs/event-page.c: (event_page_fill_component): Set the
	description only if summary has some value.								